<resources>
    <string name="app_name">Quick Contact</string>
    <string name="add_new_quick_contact">Add New Quick Contact</string>
    <string name="name">Name</string>
    <string name="Contactno">Contact No.</string>
    <string name="choosecontact">Choose from Contact</string>
    <string name="Edit_contact">Edit Contact</string>
    <string name="delete">Delete</string>
    <string name="deleteall">Unfavourite All</string>
    <string name="help">help</string>
    <string name="favourite">Favourite</string>
    <string name="recents">Recents</string>
    <string name="Phonebook">Phonebook</string>
    <string name="Recents">Recent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qc">QC</string>
    <string name="callType">Call Type</string>
    <string name="SearchContact">Search Contact</string>
    <string name="_1234567890">1234567890</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="asterisk">*</string>
    <string name="zero">0</string>
    <string name="hash">#</string>
    <string name="dial">Dial</string>
    <string name="backspace">&lt;=</string>
    <string name="no_fovourite_yet">No Favourite Yet !!!!</string>
    <string name="mark_contact_as_favourite_to_call_them_instantly"># Mark contact as favourite to call them instantly.</string>
    <string name="add_new_contacts_in_contact_list"># Add new contacts in contact list</string>
    <string name="modify_contact_by_press_and_hold_the_contact"># Modify and Delete contact by press and holding the contact</string>
    <string name="remove_all_favourite_once_in_top_right_corner"># Remove all favourite once in top right corner</string>

</resources>
