<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#808B96"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:id="@+id/help_head"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/help_head"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_contact_as_favourite_to_call_them_instantly"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_margin="5dp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_contacts_in_contact_list"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_margin="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_contact_by_press_and_hold_the_contact"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_all_favourite_once_in_top_right_corner"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_margin="5dp"
            />

    </LinearLayout>
    </RelativeLayout>
</RelativeLayout>