<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/background"
    android:layout_height="match_parent"
    tools:context="ajflims.quickcontact.Activities.AddNewActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:id="@+id/add_back_button"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:elevation="10dp"
        android:src="@drawable/add_top" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        app:cardCornerRadius="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="80dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"
                android:text="@string/add_new_quick_contact"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/add_name"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foregroundTint="@color/lineColor"
                    android:backgroundTint="@color/lineColor"
                    android:hint="@string/name"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/add_contact"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:foregroundTint="@color/lineColor"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lineColor"
                    android:hint="@string/Contactno"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="10dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:background="@drawable/button_layout"
                android:paddingLeft="15dp"
                android:id="@+id/add_choose_contact"
                android:paddingRight="15dp"
                android:drawableLeft="@drawable/contact_choose"
                android:drawablePadding="10dp"
                android:text="@string/choosecontact"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/add_successs"
        android:elevation="15dp"
        android:scaleType="center"
        android:src="@drawable/add_save_check"
        app:fabSize="normal" />

</RelativeLayout>
