<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/background"
    android:layout_height="match_parent"
    tools:context="ajflims.quickcontact.Activities.EditContactActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:id="@+id/edit_back_button"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit_option"
        android:layout_alignParentRight="true"
        android:id="@+id/edit_option_button"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/cardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@color/colorBlack"
        android:layout_height="wrap_content"
        android:text="@string/Edit_contact"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/edit_name"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="@color/lineColor"
            android:backgroundTint="@color/lineColor"
            android:hint="@string/name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/edit_contact"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:foregroundTint="@color/lineColor"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lineColor"
            android:hint="@string/Contactno"
            />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/add_successs"
            android:elevation="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:scaleType="center"
            android:src="@drawable/add_save_check"
            app:fabSize="normal" />

    </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
