<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:background="@drawable/call_log_ripple">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/calllog_layout"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="45dp"
        android:id="@+id/calllog_profile"
        android:layout_gravity="center_vertical"
        android:layout_height="45dp"
        android:src="@drawable/default_profile_picture"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginRight="35dp"
            android:id="@+id/calllog_name"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:maxLines="1"
            android:layout_marginEnd="35dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1234567890"
                android:layout_marginTop="1dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/calllog_number"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="16dp"
                android:id="@+id/calllog_calltype"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/outgoing_call"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callType"
            android:id="@+id/calllog_info"
            android:textSize="14sp"/>

    </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_contact"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/calllog_layout"
        android:layout_marginLeft="10dp"
        android:id="@+id/calllog_add_contact"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/calllog_layout" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/message_user"
        android:layout_centerVertical="true"
        android:id="@+id/calllog_message"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/calllog_layout"
        android:layout_marginTop="10dp"
        android:background="@color/view"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

</RelativeLayout>